Fixed user name display in dashboard header for ROLE_TEACHER. Refactored header fragment to correctly display user name extracted from email using regex. Verified application functionality with both roles to ensure proper functionality.